vlib/v/checker/tests/generics_fn_called_arg_mismatch.out
vlib/v/checker/tests/generics_fn_called_arg_mismatch.vv:6:15: error: argument 1 got `int literal`, expected `bool`
    4 |
    5 | fn main() {
    6 |     foo<bool>(1)
      |               ^
    7 |     foo<bool>(2.2)
    8 |     foo<string>(true)
vlib/v/checker/tests/generics_fn_called_arg_mismatch.vv:7:15: error: argument 1 got `float literal`, expected `bool`
    5 | fn main() {
    6 |     foo<bool>(1)
    7 |     foo<bool>(2.2)
      |               ~~~
    8 |     foo<string>(true)
    9 |     foo<int>('aaa')
vlib/v/checker/tests/generics_fn_called_arg_mismatch.vv:8:17: error: argument 1 got `bool`, expected `string`
    6 |     foo<bool>(1)
    7 |     foo<bool>(2.2)
    8 |     foo<string>(true)
      |                 ~~~~
    9 |     foo<int>('aaa')
   10 | }
vlib/v/checker/tests/generics_fn_called_arg_mismatch.vv:9:14: error: argument 1 got `string`, expected `int`
    7 |     foo<bool>(2.2)
    8 |     foo<string>(true)
    9 |     foo<int>('aaa')
      |              ~~~~~
   10 | }
