vlib/v/checker/tests/generics_fn_called_arg_mismatch.vv
fn foo<T>(b T) {
    println(b)
}

fn main() {
    foo<bool>(1)
    foo<bool>(2.2)
    foo<string>(true)
    foo<int>('aaa')
}
